# follow-wall-roboros

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/workflows/: main.yaml
config/: kobuki_param.yaml  param.yaml  tiago_param.yaml
follow-wall/: CMakeLists.txt  package.xml
include/: tests_unitarios_nodo.hpp
include/follow_wall_lifecycle/: follow_wall_lifecycle.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/follow-wall/lib/follow-wall/: calculate_direction
install/follow-wall/share/ament_index/resource_index/parent_prefix_path/: follow-wall
install/follow-wall/share/follow-wall/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: follow_wall_kobuki.py  follow_wall_launch.py
log/: latest_build
src/: calculate_direction.cpp  follow_wall_main.cpp  lifecycle_node.cpp  old_engine_node.cpp  old_lifecycle_node.cpp  tests_unitarios_nodo.cpp
src/follow-wall/: engine_node.cpp  tests_unitarios_nodo.cpp
src/follow_wall_lifecycle/: follow_wall_lifecycle.cpp
src/lifecycle_node/: lifecycle_node.cpp  lifecycle_node.hpp
test/: CMakeLists.txt  node_test.cpp  tests_unitarios.cpp
